parser.output
   0  $accept : %entry% $end

   1  program : fdecl
   2          | program fdecl

   3  fdecl : FUNCTION ID formal_opt COLON stmt_list END

   4  formal_opt :
   5             | formal_list

   6  formal_list : ID
   7              | formal_list ID

   8  stmt_list : stmt
   9            | stmt_list stmt

  10  stmt : expr
  11       | IF expr COLON stmt_list ELSE stmt_list END

  12  expr : ID
  13       | expr PLUS expr
  14       | expr MINUS expr
  15       | expr TIMES expr
  16       | expr DIV expr
  17       | expr MOD expr
  18       | expr EQUALITY expr
  19       | expr GTHAN expr
  20       | expr LTHAN expr
  21       | expr NSUB expr
  22       | expr NEQUAL expr
  23       | expr AND expr
  24       | NOT expr
  25       | expr OR expr
  26       | ID ASSIGN expr
  27       | LITERAL
  28       | STR
  29       | LBRACE optionals_list RBRACE
  30       | ID LPAREN optionals_list RPAREN

  31  optionals_list :
  32                 | actuals_list

  33  actuals_list : expr
  34               | actuals_list expr

  35  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (35)

	FUNCTION  shift 3
	.  error

	program  goto 4
	fdecl  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	fdecl : FUNCTION . ID formal_opt COLON stmt_list END  (3)

	ID  shift 6
	.  error


state 4
	program : program . fdecl  (2)
	%entry% : '\001' program .  (35)

	FUNCTION  shift 3
	$end  reduce 35

	fdecl  goto 7


state 5
	program : fdecl .  (1)

	.  reduce 1


state 6
	fdecl : FUNCTION ID . formal_opt COLON stmt_list END  (3)
	formal_opt : .  (4)

	ID  shift 8
	COLON  reduce 4

	formal_opt  goto 9
	formal_list  goto 10


state 7
	program : program fdecl .  (2)

	.  reduce 2


state 8
	formal_list : ID .  (6)

	.  reduce 6


state 9
	fdecl : FUNCTION ID formal_opt . COLON stmt_list END  (3)

	COLON  shift 11
	.  error


state 10
	formal_opt : formal_list .  (5)
	formal_list : formal_list . ID  (7)

	ID  shift 12
	COLON  reduce 5


state 11
	fdecl : FUNCTION ID formal_opt COLON . stmt_list END  (3)

	LBRACE  shift 13
	NOT  shift 14
	IF  shift 15
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	stmt_list  goto 19
	stmt  goto 20
	expr  goto 21


state 12
	formal_list : formal_list ID .  (7)

	.  reduce 7


state 13
	expr : LBRACE . optionals_list RBRACE  (29)
	optionals_list : .  (31)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	RBRACE  reduce 31

	expr  goto 22
	optionals_list  goto 23
	actuals_list  goto 24


state 14
	expr : NOT . expr  (24)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 25


state 15
	stmt : IF . expr COLON stmt_list ELSE stmt_list END  (11)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 26


state 16
	expr : LITERAL .  (27)

	.  reduce 27


state 17
	expr : STR .  (28)

	.  reduce 28


state 18
	expr : ID .  (12)
	expr : ID . ASSIGN expr  (26)
	expr : ID . LPAREN optionals_list RPAREN  (30)

	LPAREN  shift 27
	ASSIGN  shift 28
	RPAREN  reduce 12
	LBRACE  reduce 12
	RBRACE  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	TIMES  reduce 12
	DIV  reduce 12
	MOD  reduce 12
	AND  reduce 12
	NOT  reduce 12
	OR  reduce 12
	LTHAN  reduce 12
	GTHAN  reduce 12
	EQUALITY  reduce 12
	NSUB  reduce 12
	NEQUAL  reduce 12
	IF  reduce 12
	ELSE  reduce 12
	END  reduce 12
	COLON  reduce 12
	LITERAL  reduce 12
	STR  reduce 12
	ID  reduce 12


state 19
	fdecl : FUNCTION ID formal_opt COLON stmt_list . END  (3)
	stmt_list : stmt_list . stmt  (9)

	LBRACE  shift 13
	NOT  shift 14
	IF  shift 15
	END  shift 29
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	stmt  goto 30
	expr  goto 21


state 20
	stmt_list : stmt .  (8)

	.  reduce 8


state 21
	stmt : expr .  (10)
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)

	PLUS  shift 31
	MINUS  shift 32
	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	AND  shift 36
	OR  shift 37
	LTHAN  shift 38
	GTHAN  shift 39
	EQUALITY  shift 40
	NSUB  shift 41
	NEQUAL  shift 42
	LBRACE  reduce 10
	NOT  reduce 10
	IF  reduce 10
	ELSE  reduce 10
	END  reduce 10
	LITERAL  reduce 10
	STR  reduce 10
	ID  reduce 10


state 22
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)
	actuals_list : expr .  (33)

	PLUS  shift 31
	MINUS  shift 32
	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	AND  shift 36
	OR  shift 37
	LTHAN  shift 38
	GTHAN  shift 39
	EQUALITY  shift 40
	NSUB  shift 41
	NEQUAL  shift 42
	RPAREN  reduce 33
	LBRACE  reduce 33
	RBRACE  reduce 33
	NOT  reduce 33
	LITERAL  reduce 33
	STR  reduce 33
	ID  reduce 33


state 23
	expr : LBRACE optionals_list . RBRACE  (29)

	RBRACE  shift 43
	.  error


state 24
	optionals_list : actuals_list .  (32)
	actuals_list : actuals_list . expr  (34)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	RPAREN  reduce 32
	RBRACE  reduce 32

	expr  goto 44


state 25
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : NOT expr .  (24)
	expr : expr . OR expr  (25)

	PLUS  shift 31
	MINUS  shift 32
	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	AND  shift 36
	OR  shift 37
	LTHAN  shift 38
	GTHAN  shift 39
	NSUB  shift 41
	RPAREN  reduce 24
	LBRACE  reduce 24
	RBRACE  reduce 24
	NOT  reduce 24
	EQUALITY  reduce 24
	NEQUAL  reduce 24
	IF  reduce 24
	ELSE  reduce 24
	END  reduce 24
	COLON  reduce 24
	LITERAL  reduce 24
	STR  reduce 24
	ID  reduce 24


state 26
	stmt : IF expr . COLON stmt_list ELSE stmt_list END  (11)
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)

	PLUS  shift 31
	MINUS  shift 32
	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	AND  shift 36
	OR  shift 37
	LTHAN  shift 38
	GTHAN  shift 39
	EQUALITY  shift 40
	NSUB  shift 41
	NEQUAL  shift 42
	COLON  shift 45
	.  error


state 27
	expr : ID LPAREN . optionals_list RPAREN  (30)
	optionals_list : .  (31)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	RPAREN  reduce 31

	expr  goto 22
	optionals_list  goto 46
	actuals_list  goto 24


state 28
	expr : ID ASSIGN . expr  (26)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 47


state 29
	fdecl : FUNCTION ID formal_opt COLON stmt_list END .  (3)

	.  reduce 3


state 30
	stmt_list : stmt_list stmt .  (9)

	.  reduce 9


state 31
	expr : expr PLUS . expr  (13)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 48


state 32
	expr : expr MINUS . expr  (14)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 49


state 33
	expr : expr TIMES . expr  (15)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 50


state 34
	expr : expr DIV . expr  (16)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 51


state 35
	expr : expr MOD . expr  (17)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 52


state 36
	expr : expr AND . expr  (23)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 53


state 37
	expr : expr OR . expr  (25)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 54


state 38
	expr : expr LTHAN . expr  (20)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 55


state 39
	expr : expr GTHAN . expr  (19)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 56


state 40
	expr : expr EQUALITY . expr  (18)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 57


state 41
	expr : expr NSUB . expr  (21)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 58


state 42
	expr : expr NEQUAL . expr  (22)

	LBRACE  shift 13
	NOT  shift 14
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	expr  goto 59


state 43
	expr : LBRACE optionals_list RBRACE .  (29)

	.  reduce 29


state 44
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)
	actuals_list : actuals_list expr .  (34)

	PLUS  shift 31
	MINUS  shift 32
	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	AND  shift 36
	OR  shift 37
	LTHAN  shift 38
	GTHAN  shift 39
	EQUALITY  shift 40
	NSUB  shift 41
	NEQUAL  shift 42
	RPAREN  reduce 34
	LBRACE  reduce 34
	RBRACE  reduce 34
	NOT  reduce 34
	LITERAL  reduce 34
	STR  reduce 34
	ID  reduce 34


state 45
	stmt : IF expr COLON . stmt_list ELSE stmt_list END  (11)

	LBRACE  shift 13
	NOT  shift 14
	IF  shift 15
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	stmt_list  goto 60
	stmt  goto 20
	expr  goto 21


state 46
	expr : ID LPAREN optionals_list . RPAREN  (30)

	RPAREN  shift 61
	.  error


state 47
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)
	expr : ID ASSIGN expr .  (26)

	PLUS  shift 31
	MINUS  shift 32
	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	AND  shift 36
	OR  shift 37
	LTHAN  shift 38
	GTHAN  shift 39
	EQUALITY  shift 40
	NSUB  shift 41
	NEQUAL  shift 42
	RPAREN  reduce 26
	LBRACE  reduce 26
	RBRACE  reduce 26
	NOT  reduce 26
	IF  reduce 26
	ELSE  reduce 26
	END  reduce 26
	COLON  reduce 26
	LITERAL  reduce 26
	STR  reduce 26
	ID  reduce 26


state 48
	expr : expr . PLUS expr  (13)
	expr : expr PLUS expr .  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)

	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	RPAREN  reduce 13
	LBRACE  reduce 13
	RBRACE  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	AND  reduce 13
	NOT  reduce 13
	OR  reduce 13
	LTHAN  reduce 13
	GTHAN  reduce 13
	EQUALITY  reduce 13
	NSUB  reduce 13
	NEQUAL  reduce 13
	IF  reduce 13
	ELSE  reduce 13
	END  reduce 13
	COLON  reduce 13
	LITERAL  reduce 13
	STR  reduce 13
	ID  reduce 13


state 49
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr MINUS expr .  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)

	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	RPAREN  reduce 14
	LBRACE  reduce 14
	RBRACE  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	AND  reduce 14
	NOT  reduce 14
	OR  reduce 14
	LTHAN  reduce 14
	GTHAN  reduce 14
	EQUALITY  reduce 14
	NSUB  reduce 14
	NEQUAL  reduce 14
	IF  reduce 14
	ELSE  reduce 14
	END  reduce 14
	COLON  reduce 14
	LITERAL  reduce 14
	STR  reduce 14
	ID  reduce 14


state 50
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr TIMES expr .  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)

	.  reduce 15


state 51
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr DIV expr .  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)

	.  reduce 16


state 52
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr MOD expr .  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)

	.  reduce 17


state 53
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr AND expr .  (23)
	expr : expr . OR expr  (25)

	PLUS  shift 31
	MINUS  shift 32
	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	OR  shift 37
	LTHAN  shift 38
	GTHAN  shift 39
	NSUB  shift 41
	RPAREN  reduce 23
	LBRACE  reduce 23
	RBRACE  reduce 23
	AND  reduce 23
	NOT  reduce 23
	EQUALITY  reduce 23
	NEQUAL  reduce 23
	IF  reduce 23
	ELSE  reduce 23
	END  reduce 23
	COLON  reduce 23
	LITERAL  reduce 23
	STR  reduce 23
	ID  reduce 23


state 54
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)
	expr : expr OR expr .  (25)

	PLUS  shift 31
	MINUS  shift 32
	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	LTHAN  shift 38
	GTHAN  shift 39
	NSUB  shift 41
	RPAREN  reduce 25
	LBRACE  reduce 25
	RBRACE  reduce 25
	AND  reduce 25
	NOT  reduce 25
	OR  reduce 25
	EQUALITY  reduce 25
	NEQUAL  reduce 25
	IF  reduce 25
	ELSE  reduce 25
	END  reduce 25
	COLON  reduce 25
	LITERAL  reduce 25
	STR  reduce 25
	ID  reduce 25


state 55
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr LTHAN expr .  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)

	PLUS  shift 31
	MINUS  shift 32
	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	NSUB  shift 41
	RPAREN  reduce 20
	LBRACE  reduce 20
	RBRACE  reduce 20
	AND  reduce 20
	NOT  reduce 20
	OR  reduce 20
	LTHAN  reduce 20
	GTHAN  reduce 20
	EQUALITY  reduce 20
	NEQUAL  reduce 20
	IF  reduce 20
	ELSE  reduce 20
	END  reduce 20
	COLON  reduce 20
	LITERAL  reduce 20
	STR  reduce 20
	ID  reduce 20


state 56
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr GTHAN expr .  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)

	PLUS  shift 31
	MINUS  shift 32
	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	NSUB  shift 41
	RPAREN  reduce 19
	LBRACE  reduce 19
	RBRACE  reduce 19
	AND  reduce 19
	NOT  reduce 19
	OR  reduce 19
	LTHAN  reduce 19
	GTHAN  reduce 19
	EQUALITY  reduce 19
	NEQUAL  reduce 19
	IF  reduce 19
	ELSE  reduce 19
	END  reduce 19
	COLON  reduce 19
	LITERAL  reduce 19
	STR  reduce 19
	ID  reduce 19


state 57
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr EQUALITY expr .  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)

	PLUS  shift 31
	MINUS  shift 32
	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	AND  shift 36
	OR  shift 37
	LTHAN  shift 38
	GTHAN  shift 39
	NSUB  shift 41
	RPAREN  reduce 18
	LBRACE  reduce 18
	RBRACE  reduce 18
	NOT  reduce 18
	EQUALITY  reduce 18
	NEQUAL  reduce 18
	IF  reduce 18
	ELSE  reduce 18
	END  reduce 18
	COLON  reduce 18
	LITERAL  reduce 18
	STR  reduce 18
	ID  reduce 18


state 58
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr NSUB expr .  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)

	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	RPAREN  reduce 21
	LBRACE  reduce 21
	RBRACE  reduce 21
	PLUS  reduce 21
	MINUS  reduce 21
	AND  reduce 21
	NOT  reduce 21
	OR  reduce 21
	LTHAN  reduce 21
	GTHAN  reduce 21
	EQUALITY  reduce 21
	NSUB  reduce 21
	NEQUAL  reduce 21
	IF  reduce 21
	ELSE  reduce 21
	END  reduce 21
	COLON  reduce 21
	LITERAL  reduce 21
	STR  reduce 21
	ID  reduce 21


state 59
	expr : expr . PLUS expr  (13)
	expr : expr . MINUS expr  (14)
	expr : expr . TIMES expr  (15)
	expr : expr . DIV expr  (16)
	expr : expr . MOD expr  (17)
	expr : expr . EQUALITY expr  (18)
	expr : expr . GTHAN expr  (19)
	expr : expr . LTHAN expr  (20)
	expr : expr . NSUB expr  (21)
	expr : expr . NEQUAL expr  (22)
	expr : expr NEQUAL expr .  (22)
	expr : expr . AND expr  (23)
	expr : expr . OR expr  (25)

	PLUS  shift 31
	MINUS  shift 32
	TIMES  shift 33
	DIV  shift 34
	MOD  shift 35
	AND  shift 36
	OR  shift 37
	LTHAN  shift 38
	GTHAN  shift 39
	NSUB  shift 41
	RPAREN  reduce 22
	LBRACE  reduce 22
	RBRACE  reduce 22
	NOT  reduce 22
	EQUALITY  reduce 22
	NEQUAL  reduce 22
	IF  reduce 22
	ELSE  reduce 22
	END  reduce 22
	COLON  reduce 22
	LITERAL  reduce 22
	STR  reduce 22
	ID  reduce 22


state 60
	stmt_list : stmt_list . stmt  (9)
	stmt : IF expr COLON stmt_list . ELSE stmt_list END  (11)

	LBRACE  shift 13
	NOT  shift 14
	IF  shift 15
	ELSE  shift 62
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	stmt  goto 30
	expr  goto 21


state 61
	expr : ID LPAREN optionals_list RPAREN .  (30)

	.  reduce 30


state 62
	stmt : IF expr COLON stmt_list ELSE . stmt_list END  (11)

	LBRACE  shift 13
	NOT  shift 14
	IF  shift 15
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	stmt_list  goto 63
	stmt  goto 20
	expr  goto 21


state 63
	stmt_list : stmt_list . stmt  (9)
	stmt : IF expr COLON stmt_list ELSE stmt_list . END  (11)

	LBRACE  shift 13
	NOT  shift 14
	IF  shift 15
	END  shift 64
	LITERAL  shift 16
	STR  shift 17
	ID  shift 18
	.  error

	stmt  goto 30
	expr  goto 21


state 64
	stmt : IF expr COLON stmt_list ELSE stmt_list END .  (11)

	.  reduce 11


32 terminals, 11 nonterminals
36 grammar rules, 65 states
